# PTOAS

./: CMakeLists.txt
.github/scripts/: compute_ptoas_version.py  update_pto_isa_pin.py  update_ptoas_base_version.py
.github/workflows/: build_wheel.yml  build_wheel_mac.yml  ci.yml  sync_base_version.yml  update_pto_isa_pin.yml
cmake/: LinuxHardeningCache.cmake
docker/: Dockerfile  collect_ptoas_dist.sh  collect_ptoas_dist_mac.sh  copy_ptoas_deps.sh
docs/: PTO_IR_manual.md  no_npu_compile_only_guide_zh.md  pto-ssa-dialect.md
docs/designs/: ptoas-auto-sync-design.md  ptoas-auto-sync-design_EN.md  ptoas-tpush-tpop-design.md
include/PTO/IR/: PTOAttrs.td  PTOOps.td  PTOTypeDefs.td
include/PTO/Transforms/: Passes.h  Passes.td
lib/Bindings/Python/: CMakeLists.txt  PTOModule.cpp  PTOSSAModule.cpp
lib/CAPI/Dialect/: PTO.cpp
lib/PTO/: CMakeLists.txt
lib/PTO/IR/: PTO.cpp
lib/PTO/PTOSSA/: CMakeLists.txt
lib/PTO/PTOSSA/IR/: CMakeLists.txt  PTOSSA.cpp
lib/PTO/Transforms/: CMakeLists.txt  InferPTOLayout.cpp  InferPTOMemScope.cpp  PTOLowerFrontendPipeOpsPass.cpp  PTOMaterializeTileHandles.cpp  (+7 more)
python/: CMakeLists.txt
test/basic/: kernel_kind_vector_scf_while_emitc.pto  tinsert_a5_vec_mat_mode_lowering.pto  tinsert_a5_vec_pipe_selection.pto  tpush_tpop_emitc.pto  tpush_tpop_frontend_lowering_a3.pto  tpush_tpop_frontend_lowering_a5.pto  tpush_tpop_pipe_ops.pto  tpush_tpop_reserved_buffer_a3.pto  tpush_tpop_reserved_buffer_a5.pto  tpush_tpop_reserved_buffer_manual_a5.pto
test/python/: ssa_ops.py
test/samples/: runop.sh
tools/ptoas/: ptoas.cpp
(+97 files in other folders)
